<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:fitsSystemWindows="true"
   >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <!--<ImageView-->
            <!--android:layout_width="@dimen/logo_w_h"-->
            <!--android:layout_height="@dimen/logo_w_h"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="30dp"-->
            <!--android:src="@mipmap/ic_launcher" android:contentDescription="TODO" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/email"
                android:background="@drawable/textinputborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="20dp"
                android:singleLine="true"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Password needs to be minimum 8 characters all lower case characters." />




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:background="@drawable/textinputborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20dp"
                android:singleLine="true"
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/confirm_password1"
                android:background="@drawable/textinputborder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_confirm_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20dp"
                android:singleLine="true"
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<EditText-->
                <!--android:id="@+id/confirm_password2"-->
                <!--android:background="@drawable/textinputborder"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:focusableInTouchMode="true"-->
                <!--android:hint="@string/hint_confirm_password"-->
                <!--android:imeOptions="actionUnspecified"-->
                <!--android:inputType="textPassword"-->
                <!--android:maxLines="1"-->
                <!--android:singleLine="true"-->
                <!--android:textColor="@color/black" />-->

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <!--<Button-->
            <!--android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:background="@color/colorPrimaryDark"-->
            <!--android:text="@string/action_sign_in_short"-->
            <!--android:textColor="@color/black"-->
            <!--android:textStyle="bold" />-->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <!--<Button-->
            <!--android:id="@+id/btn_reset_password"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dip"-->
            <!--android:background="@null"-->
            <!--android:text="@string/btn_forgot_password"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/colorAccent" />-->

        <!-- Link to Login Screen -->


    </LinearLayout></ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>